Miscellaneous fixes noticed while updating another repo.
ControllersScene2D I don't think actually needs the Controllers library. Headless was missing a required duplicatesStrategy. The generated GWT page would have text that was unreadable (black on dark gray) before, and now uses light gray on dark gray text, or light blue on dark gray for links.

--- a/src/main/resources/generator/html/webapp/styles.css
+++ b/src/main/resources/generator/html/webapp/styles.css
@@ -7,6 +7,16 @@ body {
     background-color: #222222;
 }
 
+p {
+    text-align: center;
+    color: #eeeeee;
+}
+
+a {
+    text-align: center;
+    color: #bbbbff;
+}
+
 .superdev {
     color: rgb(37,37,37);
     text-shadow: 0px 1px 1px rgba(250,250,250,0.1);
